src/test/ui/issues/issue-50264-inner-deref-trait/result-deref-err.stderr
error[E0599]: no method named `deref_err` found for type `std::result::Result<_, {integer}>` in the current scope
  --> $DIR/result-deref-err.rs:4:28
   |
LL |     let _result = &Err(41).deref_err();
   |                            ^^^^^^^^^ help: there is a method with a similar name: `deref_ok`
   |
   = note: the method `deref_err` exists but the following trait bounds were not satisfied:
           `{integer} : std::ops::Deref`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
