src/test/ui/issues/issue-50264-inner-deref-trait/result-deref-err.rs
#![feature(inner_deref)]

fn main() {
    let _result = &Err(41).deref_err();
//~^ ERROR no method named `deref_err` found
}
